# stock_valuation_project

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api_client.py  cli.py  controllers.py  endpoints.py  main.py  valuation_models.py
tests/: test_valuation.py
